--- a/code/style.css
+++ b/code/style.css
@@ -1,44 +1,25 @@
 * {
     margin: 0;
     padding: 0;
-    line-height: 0;
 }
 
-body {
-    background-color: #ccc;
-    text-align: center;
+.box {
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    margin: 50px auto;
+    transition: .3s width,
+                .3s height .3s,
+                .3s margin-top .3s,
+                1s background-color;
 }
 
-.container {
-    width: 600px;
-    margin: 10px auto; 
-    border: 5px solid white;
-    overflow: auto;
+.size {
+    width: 150px;
+    height: 150px;
+    margin-top: 25px;
 }
 
-.thumb {
-    width: 200px;
-    float: left;
-    border: 2px solid white;
-    box-sizing: border-box;
-}
-
-.thumb:hover {
-    opacity: 0.5;
-    cursor: pointer;
-}
-
-@keyframes fadeIn {
-    to {
-        opacity: 1;
-    }
-}
-
-.fade {
-    opacity: 0;
-    animation: fadeIn 0.5s forwards;
-}
-
-.active {
-    opacity: 0.5;
+.caption {
+    background-color: black;
 }
